css/main.css
@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
/* - - - - GENERAL - - - - */
html {
  margin: 0;
  padding: 0;
  font-size: 13px;
}

body {
  font-size: 13px;
  line-height: 1.4;
}

/* - - - - TEXT - - - - */
#home-button, ul, h1, h2, h3 {
  font-family: 'Lato', sans-serif;
}
#home-button #og-home-button:hover, ul #og-home-button:hover, h1 #og-home-button:hover, h2 #og-home-button:hover, h3 #og-home-button:hover {
  background-color: rgba(255, 142, 107, 0.5);
}

p {
  font-family: Garamond, serif;
  line-height: 1.3em;
}

/* - - - - NAV - - - - */
#masterhead {
  border-bottom: 2px solid;
  padding-bottom: 1.5rem;
  padding-top: 2rem;
  position: fixed;
  top:0;
  left: 0;
  right: 0;
  z-index: 9999;
  background-color: #fff;
}

#masterhead-space {
  position: relative;
  height: 8rem;
}

#masterhead #home-button {
  float: left;
  padding-left: 2.2rem;
}
#masterhead #home-button #og-home-button {
  text-decoration: none;
  color: black;
  font-weight: bold;
  padding: 0.6rem 1.2rem 0.6rem 1.2rem;
}
#masterhead #home-button #og-home-button:hover {
  background-color: rgba(255, 142, 107, 0.5);
}

#nav {
  padding-left: 2.1rem;
  padding-right: 2.1rem;
  float: right;
}
#nav .nav-link {
  display: inline-block;
}
#nav .nav-link a {
  text-decoration: none;
  color: black;
  font-weight: bold;
  padding: 0.6rem 0.8rem 0.6rem 0.8rem;
}
#nav .nav-link a:hover {
  background-color: rgba(255, 142, 107, 0.5);
}
#nav .nav-link:hover #subnav {
  display: block;
  width: 100%;
}

#alt-home-button {
  visibility: hidden;
  position: absolute;
}

#subnav {
  position: absolute;
  padding-left: 0rem;
  padding-top: .8rem;
  display: none;
  list-style: none;
}
#subnav .subnav-link {
  margin-top: 1.1rem;
}

.active > a {
  background-color: #FF8E6B;
}

/* - - - - HOMEPAGE - - - - */

.welcome_box h1 {
  font: italic bold Georgia, Serif;
  padding-top: 21vh;
  padding-bottom: 21vh;
  text-align: center;
}

.fa-angle-down {
  font-size: 7rem;
  margin-left: 48%;
  padding-bottom: 2rem;
}

/*  - - - - PORTFOLIO PAGES  - - - - */
.container {
  margin-top: 2rem;
}

.pages {
  display: none;
}
.pages .margin {
  padding-bottom: 5rem;
}

.grid-item:last-of-type {
  padding-bottom: 4rem;
}

.thumbnail {
  margin-bottom: 1rem;
}

/*   - - - - ABOUT ME   - - - - */
 
/* squiggle */

.holder {
  /* Clip edges, as some of the lines don't terminate nicely. */
    overflow: hidden;
    position: relative;
    width: 55%;
    height: 100px;
    margin: auto;
}

.ellipse {
    position: absolute;
    background: radial-gradient(ellipse, transparent, transparent 10px, black 10px, black 15px, transparent 15px);
    background-size: 48px 40px;
    width: 100%;
    height: 19px;
    top: 11px;
    left: -17px;
}

.ellipse2 {
    top: 29px;
    background-position: 25px -23px;
    left: -18px;
}

/* other */

.contact-intro {
  position: static;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}
.contact-intro p {
  width: 20rem;
  padding-bottom: 1rem;
  margin: auto;
}

.icon {
  width: 20rem;
  margin: auto;
}
.icon a > img {
  width: 20%;
}

.profile1, .profile2 {
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 50%;
  behavior: url(PIE.htc);
  /* remove if you don't care about IE8 */
  width: 18rem;
  height: 18rem;
  margin-right: auto;
  margin-left: auto;
}

.profile1 {
  background-image: url(../img/profile1.jpg);
  background-size: 110%;
  border: 5px solid red;
  margin-top: 2rem;
}
.profile2 {
  background-image: url(../img/profile2.jpg);
  background-size: 120%;
  border: 5px solid darkblue;
}


form {
  width: 80%;
  margin: auto;
  margin-top: 1rem;
  margin-bottom: 2rem;
  font-size: 0.9rem;
}
form input, form textarea {
  width: 100%;
  padding: .4rem 0 .4rem 1rem;
  margin-bottom: .5rem;
}
form .form-button {
  width: 40%;
}

.icon img {
  width: 80%;
}

/* FOOTER */
.container {
  width: 15rem;
  margin-right: 0rem;
  margin-top: 1rem;
}

.navbar-fixed-bottom {
  padding: 1rem;
  background: white;
}

/*   - - - - MEDIA QUERIES - - - - */
#alt-home-button {
  visibility: visible;
  position: static;
}

#home-button, #minimize {
  visibility: hidden;
  position: absolute;
}

/* MEDIUM SCREEN 768 */
@media screen and (min-width: 768px) {
  #alt-home-button, #minimize {
    visibility: visible;
    position: static;
  }

  #un-minimize, #alt-home-button, #home-button > span {
    visibility: hidden;
    position: absolute;
  }

  #home-button > span:nth-of-type(2) {
    visibility: visible;
    position: relative;
  }

  #masterhead {
    margin-left: 2rem;
    margin-right: 2rem;
  }

#home-button {
    visibility: visible;
    position: absolute;
  }

  .welcome_box h1 {
    font: italic bold 70px Georgia, Serif;
  }

  #fishies_1, #fishies_2 {
    animation-duration: 6s;
  }

  .flip img {
    animation-duration: 12s;
  }

  @keyframes swim1 {
    from {
      margin-left: -40%;
    }
    to {
      margin-left: 70%;
    }
  }
  @keyframes swim2 {
    from {
      margin-left: -60%;
    }
    to {
      margin-left: 80%;
    }
  }
  #fishies_1 img {
    width: 7rem;
  }

  #fishies_2 img {
    width: 12rem;
  }

  .contact-intro {
    position: static;
    top: 35rem;
  }
  .contact-intro p {
    width: 28rem;
  }

  .icon {
    width: 20rem;
  }

  .nav-link a {
    padding: .3rem 0.65rem .3rem 0.65rem;
  }
}
/* BIG SCREEN 992 */
@media screen and (min-width: 992px) {
  p {
    font-size: 14px;
  }

  .contact-intro {
    float: left;
    margin-left: 5rem;
    padding-top: 0rem;
    padding-bottom: 2rem;
  }

  .contact-intro p {
    width: 29rem;
  }

  .profile1, .profile2 {
    margin-top: 0px;
    float: left;
    clear: left;
    margin-left: 20%;
  }

  .icon {
    float: left;
    width: 19.2rem;
    margin-left: 20%;
  }

  #masterhead {
    margin-left: 2rem;
    margin-right: 2rem;
  }
  #masterhead #home-button a, #home-button span {
    visibility: visible;
    position: relative;
  }

  .welcome_box h1 {
    font: italic bold 80px Georgia, Serif;
  }


  .pages {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

